2016-08-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Merge w32api-3.18.1 legacy updates to 5.0-active branch.

	* include/ddk/winddk.h: Update per issue [#2307] resolution.
	* include/ddk/ntdddisk.h include/ddk/ntddstor.h: Likewise.

2016-07-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag all files for release of w32api-3.18.1

	* configure.ac (AC_INIT): Increment patch level to 3.18.1

2016-07-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve improper macro expansion issue [#2307].

	* include/ddk/winddk.h (__FILE_AM_BUFFERED, __FILE_RD_BUFFERED)
	(__FILE_RW_BUFFERED): Redefine, encapsulating the expansion of each
	dependent macro WITHIN the expansion of each of these; hence...

	* include/ddk/ntdddisk.h (IOCTL_DISK_GET_DRIVE_GEOMETRY)
	(IOCTL_DISK_FORMAT_TRACKS_EX, IOCTL_DISK_REASSIGN_BLOCKS)
	(IOCTL_DISK_GET_MEDIA_TYPES, IOCTL_DISK_CONTROLLER_NUMBER)
	(IOCTL_DISK_GET_DRIVE_LAYOUT, IOCTL_DISK_SET_DRIVE_LAYOUT)
	(IOCTL_DISK_GET_PARTITION_INFO, IOCTL_DISK_SET_PARTITION_INFO)
	(IOCTL_DISK_GET_DRIVE_GEOMETRY_EX, IOCTL_DISK_UPDATE_DRIVE_SIZE)
	(IOCTL_DISK_VERIFY, IOCTL_DISK_FORMAT_TRACKS, IOCTL_DISK_PERFORMANCE)
	(IOCTL_DISK_CREATE_DISK, IOCTL_DISK_RESERVE, IOCTL_DISK_IS_WRITABLE)
	(IOCTL_DISK_GET_PARTITION_INFO_EX, IOCTL_DISK_SET_PARTITION_INFO_EX)
	(IOCTL_DISK_GET_CACHE_INFORMATION, IOCTL_DISK_SET_CACHE_INFORMATION)
	(IOCTL_DISK_INTERNAL_SET_VERIFY, IOCTL_DISK_INTERNAL_CLEAR_VERIFY)
	(IOCTL_DISK_GET_DRIVE_LAYOUT_EX, IOCTL_DISK_SET_DRIVE_LAYOUT_EX)
	(IOCTL_DISK_GROW_PARTITION, IOCTL_DISK_DELETE_DRIVE_LAYOUT)
	(IOCTL_DISK_GET_LENGTH_INFO, IOCTL_DISK_PERFORMANCE_OFF)
	(IOCTL_DISK_CHECK_VERIFY, IOCTL_DISK_FIND_NEW_DEVICES)
	(SMART_GET_VERSION, SMART_RCV_DRIVE_DATA, SMART_SEND_DRIVE_COMMAND):
	...adjust these dependent macro definitions accordingly.

	* include/ddk/ntddstor.h (IOCTL_STORAGE_CHECK_VERIFY)
	(IOCTL_STORAGE_CHECK_VERIFY2, IOCTL_STORAGE_MEDIA_REMOVAL)